some ibid content, new dijkstraall fig

--- a/references.bib
+++ b/references.bib
@@ -554,6 +554,27 @@
    url = {http://www.rand.org/pubs/papers/P923.html},
 }
 
+=== From http://dl.acm.org/citation.cfm?id=338900 ===
+@article{frigioni2000dynamicsp,
+   author = {Frigioni, Daniele and Marchetti-Spaccamela, Alberto
+      and Nanni, Umberto},
+   title = {Fully Dynamic Algorithms for Maintaining Shortest Paths
+      Trees},
+   journal = {J. Algorithms},
+   issue_date = {Feb. 2000},
+   volume = {34},
+   number = {2},
+   month = feb,
+   year = {2000},
+   issn = {0196-6774},
+   pages = {251--281},
+   numpages = {31},
+   url = {http://dx.doi.org/10.1006/jagm.1999.1048},
+   doi = {10.1006/jagm.1999.1048},
+   publisher = {Academic Press, Inc.},
+   address = {Duluth, MN, USA},
+} 
+
 === Manual ===
 @techreport{fulkerson1953lbap,
    author = {Fulkerson, R. and Glicksberg, I. and Gross, O.},
@@ -1564,7 +1585,7 @@
 }
 
 === From sciencedirect ===
-@article{ramalingam1996,
+@article{ramalingam1996dynamicswsffp,
    author = {G. Ramalingam and Thomas Reps},
    title = {An Incremental Algorithm for a Generalization of the
       Shortest-Path Problem},
