--- a/thesis-ch01-intro.tex
+++ b/thesis-ch01-intro.tex
@@ -135,7 +135,7 @@ and Lazy Weighted A* \citep{cohen2014narms}.
 
 \paragraph{\nameref{chap:ibid} (Chapter~\ref{chap:ibid})}
 LazySP relies on an inner incremental search algorithm,
-such as DynamicSWSF-FP \citep{ramalingam1996}
+such as DynamicSWSF-FP \citep{ramalingam1996dynamicswsffp}
 or Lifelong Planning A* \citep{koenig2004lpastar},
 to nominate candidate paths on each iteration.
 However,
