--- a/thesis-ch05-lemur.tex
+++ b/thesis-ch05-lemur.tex
@@ -736,7 +736,7 @@ can be stored as a single scalar value $w$ per edge,
 with only a single edge weight updated per iteration.
 Second,
 an incremental shortest-path algorithm
-such as DynamicSWSF-FP \citep{ramalingam1996}
+such as DynamicSWSF-FP \citep{ramalingam1996dynamicswsffp}
 or Lifelong Planning A* \citep{koenig2004lpastar}
 can be used to efficiently search for candidate paths.
 
