add ibid-dijkstra-trust plot

--- a/thesis-ch04-ibid.tex
+++ b/thesis-ch04-ibid.tex
@@ -371,6 +371,15 @@ This contradiction implies that every vertex $x$
 with $\hat d_s(x) \leq \hat d_s'$
 must have $\hat d_s(x) = d_s(x)$.
 
+\begin{marginfigure}
+   \centering
+   \includegraphics{build/ibid-dijkstra-trust}
+   \caption{Tensioned edge trust region
+      for $w \geq 0$.
+      Contours are of the current estimate $\hat d_s$.
+      Currently tensioned edges are bold and dotted.}
+\end{marginfigure}
+
 As a result,
 a given value $\hat d_s'$ creates a region of vertices
 with values $\hat d_s(x) \leq \hat d_s'$ that are known to be
