latest ibid text, add prelim family plots

--- a/thesis-ch02-roadmaps.tex
+++ b/thesis-ch02-roadmaps.tex
@@ -263,6 +263,9 @@ RGGs.
 
 Central point: densified roadmap strategy with good properties.
 
+Todo: link to BIT* paper, which does the same conversion to
+accommodate spaces with arbitrary bounds.
+
 \begin{equation}
    \gamma^*_{\mathcal{C}}
       = 2 \left( \left[ 1 + \frac{1}{d} \right]
