--- a/thesis.tex
+++ b/thesis.tex
@@ -43,6 +43,7 @@
 \newfloat{genericfloat}{h}{gflt}
 
 \usepackage{pgfplots}
+\usepackage{pgfplotstable}
 \usepackage{tikz}
 \usetikzlibrary{arrows,backgrounds,calc,patterns,positioning,shapes,decorations.pathmorphing}
 
