--- a/thesis-ch04-ibid.tex
+++ b/thesis-ch04-ibid.tex
@@ -184,21 +184,21 @@ the \emph{single-source} problem,
 where shortest paths are calculated from $s$ to all vertices on
 the graph.
 They proceed by calculating the \emph{source distance function}
-$d_s : V \rightarrow \mathbb{R}$,
+$d^* : V \rightarrow \mathbb{R}$,
 which gives the length of the shortest path from $s$
 to each vertex $v$.
 In other words:
-\marginnote{Once the distance function $d_s$ is computed,
+\marginnote{Once the distance function $d^*$ is computed,
 a shortest path to any target $t$ can be generated trivially
-by walking backwards to $s$ guided by $d_s$.}
+by walking backwards to $s$ guided by $d^*$.}
 \begin{equation}
-   d_s(v) = \min_{p \in P_{sv}} \mbox{len}(p),
+   d^*(v) = \min_{p \in P_{sv}} \mbox{len}(p),
    \label{eqn:ibid-distance-function-global}
 \end{equation}
 where $P_{sv}$ is the set of all paths from $s$ to $v$.
 Where no paths to $v$ exist,
-we take $d_s(v) = \infty$.
-Note that $d_s$ is only well-defined on graphs with no negative-length
+we take $d^*(v) = \infty$.
+Note that $d^*$ is only well-defined on graphs with no negative-length
 cycles reachable from $s$.
 
 \begin{marginfigure}%
@@ -208,19 +208,19 @@ cycles reachable from $s$.
    \label{fig:ibid:example-distance-all}%
 \end{marginfigure}
 
-Importantly, $d_s$ can also be characterized locally by
+Importantly, $d^*$ can also be characterized locally by
 \begin{equation}
-   d_s(v) = 
+   d^*(v) = 
    \left\{ \begin{array}{cl}
       0 & \mbox{if } v = s \\
-      \displaystyle\min_{u \in \mbox{\scriptsize Pred}(v)} d_s(u) + w(u,v) & \mbox{otherwise,} \\
+      \displaystyle\min_{u \in \mbox{\scriptsize Pred}(v)} d^*(u) + w(u,v) & \mbox{otherwise,} \\
    \end{array} \right.
    \label{eqn:distance-function-char}
 \end{equation}
 where $\mbox{Pred}(v)$ yeilds the predecessor vertices
 of $v$.
 \marginnote{Note that
-while the distance function $d_s$ necessarily satisfies
+while the distance function $d^*$ necessarily satisfies
 the equations (\ref{eqn:distance-function-char}),
 they are not generally a sufficint condition;
 if a reachable cycle of zero length exists,
@@ -233,80 +233,103 @@ which rely on the principle of optimality.
 This characterization also follows implicitly from early results for
 the all-pairs problem
 \citep{shimbel1955communicationnets, beckmann1955transportation}.
+Note that (\ref{eqn:distance-function-char}) is a necessary condition
+of $d^*$,
+it is not sufficient in general.
+In particular,
+if $w$ has cycles of zero length,
+there will be multiple solutions of (\ref{eqn:distance-function-char})
+which are not the well-defined $d^*$.
 
-\subsection{Approximating $d_s$ via Tensioned Estimates}
+\paragraph{Reconstructing a Shortest Path from the Distance Function}
+\cdnote{Add note about path reconstruction.
+Problem if there exist zero-length cycles.}
+
+\subsection{Approximating $d^*$ via Tensioned Estimates}
 \label{subsec:ibid-tension}
 
-How can we compute $d_s$ efficently over the graph?
-Consider an approximation $\hat d_s$ of $d_s$ 
+How can we compute $d^*$ efficently over the graph?
+Consider an approximation function $d$
 which satisfies the following properties:
-\begin{equation}
-   d_s(v) \leq \hat d_s(v)
-   \mbox{ and }
-   \hat d_s(s) = d_s(s) = 0.
-   \label{eqn:ibid-relaxation-props}
-\end{equation}
-Further, for any approximation $\hat d_s$,
-we can capture its violations of
-(\ref{eqn:distance-function-char})
-via the following labeling:
-\begin{equation}
-   \mbox{edge } (u,v) \mbox{ is \emph{tensioned}}
-   \;\;\mbox{iff}\;\;
-   \hat d_s(u) + w(u,v) < \hat d_s(v)
-   \label{eqn:ibid-relaxation-tensioned}
-\end{equation}
+\begin{subequations}%
+   \begin{eqnarray}
+      & d^*(v) \leq d(v) & \forall v \in V
+         \label{eqn:ibid-relaxation-props-nounder} \\
+      & d(s) = 0 &
+         \label{eqn:ibid-relaxation-props-ds0} \\
+      & d(u) + w(e_{uv}) \geq d(v) & \forall e_{uv} \in E
+         \label{eqn:ibid-relaxation-props-tens}
+   \end{eqnarray}%
+   \label{eqn:ibid-relaxation-props}%
+\end{subequations}%
 
-Suppose that we arrive at an approximation $\hat d_s$
-satisfying (\ref{eqn:ibid-relaxation-props})
-with no tensioned edges.
-We can show that this estimate must be correct everywhere
-(i.e. $\hat d_s(v) = d_s(v) \;\forall v$).
+\begin{theorem}
+If $d: V \rightarrow \mathbb{R}$
+satisfies (\ref{eqn:ibid-relaxation-props}),
+then $d = d^*$.
+\label{thm:ibid-relaxation-notension}
+\end{theorem}
+
+\begin{proof}[Proof of Theorem~\ref{thm:ibid-relaxation-notension}]
 Consider any vertex $x$.
-If $d_s(x) = \infty$,
-then by (\ref{eqn:ibid-relaxation-props}) we must have that
-$\hat d_s(x) = \infty$.
+If $d^*(x) = \infty$,
+then by (\ref{eqn:ibid-relaxation-props-nounder}) we must have that
+$d(x) = \infty$.
 Otherwise,
 by (\ref{eqn:ibid-distance-function-global}),
-there exists a path $p$ of length $d_s(x)$;
+there exists a path $p^*$ of length $d^*(x)$;
 consider this path.
-The first vertex on $p$ is $s$,
+The first vertex on $p^*$ is $s$ with $d^*(s) = 0$,
 and by (\ref{eqn:ibid-relaxation-props}),
-$\hat d_s(s) = d_s(s)$.
-For each edge $(u,v)$ on $p$ with $\hat d_s(u) = d_s(u)$,
-we will show that if the edge is not tensioned,
-then $\hat d_s(v) = d_s(v)$.
-First, by (\ref{eqn:ibid-relaxation-props})
-we have that $d_s(v) \leq \hat d_s(v)$.
-Second,
-since $(u,v)$ is not tensioned,
-by (\ref{eqn:ibid-relaxation-tensioned})
-we have that $\hat d_s(v) \leq \hat d_s(u) + w(u,v)$.
-By (\ref{eqn:ibid-relaxation-props})
-we can rewrite as
-$\hat d_s(v) \leq d_s(u) + w(u,v)$,
-which by definition of a shortest path,
-we can write
-$\hat d_s(v) \leq d_s(v)$.
-Therefore $\hat d_s(v) = d_s(v)$,
-and by induction along the path $p$,
-we have that $\hat d_s(x) = d_s(x)$.
+$d(s) = d^*(s)$.
+For each edge $e_{uv}$ on $p^*$ with $d(u) = d^*(u)$,
+we will show that $d(v) = d^*(v)$.
+By definition of the shortest path,
+$d^*(u) + w(e_{uv}) = d^*(v)$.
+Therefore $d(u) + w(e_{uv}) = d^*(v)$,
+and by (\ref{eqn:ibid-relaxation-props-tens}),
+we have $d^*(v) \geq d(v)$,
+and by (\ref{eqn:ibid-relaxation-props-nounder})
+we have $d^*(v) = d(v)$.
+By induction along the path $p^*$,
+we have that $d(x) = d^*(x)$.
+\end{proof}
 
-\subsection{Determining $d_s$ by Edge Relaxation}
+\subsection{Tensioned Estimates and Edge Relaxation}
 
-We can initialize an approximation $\hat d_s$ so as to trivially
-satisfy (\ref{eqn:distance-function-char}),
-such as $\hat d_s(v) = \infty \;\forall v \neq s$.
-But how can we improve the approximation in order to
-calculate $d_s$?
-The principal technique relies on the principle of
+The principal method for arriving at an approximation
+which satisfies (\ref{eqn:ibid-relaxation-props})
+is via \emph{tensioned estimates}.
+Consider the following labeling on an arbitrary approximation $d$:
+\begin{equation}
+   \mbox{edge } e_{uv} \mbox{ is \emph{tensioned}}
+   \;\;\mbox{iff}\;\;
+   d(u) + w(e_{uv}) < d(v).
+   \label{eqn:ibid-relaxation-tensioned}
+\end{equation}
+Tensioned edges are therefore those that violate
+(\ref{eqn:ibid-relaxation-props-tens}).
+A restatement of Theorem~\ref{thm:ibid-relaxation-notension}
+is that an approximation $d$
+satisfying (\ref{eqn:ibid-relaxation-props-ds0})
+and (\ref{eqn:ibid-relaxation-props-nounder})
+with no tensioned edges is everywhere correct.
+
+How can we arrive at an approximation
+satisfying Theorem~\ref{thm:ibid-relaxation-notension}?
+We can initialize a $d$ so as to trivially
+satisfy (\ref{eqn:ibid-relaxation-props-ds0})
+and (\ref{eqn:ibid-relaxation-props-nounder}),
+such as $d(v) = \infty \;\forall v \neq s$,
+which will generally have many edges in tension.
+The principal technique for improving $d$ relies on the principle of
 \emph{relaxation}
 as described by Ford \citep{ford1955networkflowtheory}.
-An algorithm can iteratively select tensioned edges and
-relax them by setting
-$\hat d_s(v) \leftarrow \hat d_s(u) + w(u,v)$.
+An algorithm can iteratively select a tensioned edge $e_{uv}$
+and relax it by setting
+$d(v) \leftarrow d(u) + w(e_{uv})$.
 It can be shown that applying this process arbitrarily
-maintains the properties in (\ref{eqn:distance-function-char}).
+maintains the properties in (\ref{eqn:ibid-relaxation-props}).
 
 It can be further shown that for a finite graph,
 the number of edge relaxations needed is also finite.
@@ -316,166 +339,209 @@ moore1959spmaze}
 cycles through all edges repeatedly,
 relaxing all tensioned edges found
 (at most $|V|-1$ repetitions are sufficient for convergence).
+Note that this does not place any requirements on $G$
+(other than that $d^*$ must exist, so there must not be
+any negative-length cycles reachable from $s$).
 
-\subsection{Exploiting A Better Relaxation Ordering}
+\subsection{Soundness, Trust Regions, and an Efficient Ordering}
 
 The need for multiple cycles of Bellman-Ford stems from the fact
 that each edge may need to be relaxed several times.
 Consider the vertices $a \rightarrow b \rightarrow c$,
-with edges $ab$ and $bc$ both in tension;
-if $bc$ is relaxed before $ab$,
-then $bc$ will need to be relaxed a second time.
+with edges $e_{ab}$ and $e_{bc}$ both in tension;
+if $e_{bc}$ is relaxed before $e_{ab}$,
+then $e_{bc}$ will need to be relaxed a second time.
 This occurrs because relaxing an edge changes the
-$\hat d_s$-value of the target vertex,
+$d$-value of the target vertex,
 which may newly tension downstream edges.
 
 We can exploit our intution to order relaxations from source to sink
 in the special case where $w \geq 0$
 (note that this requirement is stronger than requiring no reachable
 negative-length cycles).
-In this case,
-let $\hat d_s'$ be the smallest value $\hat d_s(u)$
-for any edge $uv$ currently in tension.
-Then we can show that any vertex $v$ with $\hat d_s(v) \leq \hat d_s'$
-has $\hat d_s(v) = d_s(v)$.
-
-The proof proceeds as follows.
-First, if $\hat d_s' = \infty$,
-then no edges can be in tension,
-and so $\hat d_s = d_s$ everywhere
-as shown in Section~\ref{subsec:ibid-tension}.
-Otherwise,
-suppose that $\hat d_s(x) \neq d_s(x)$
-for some vertex $x$ with $\hat d_s(x) \leq \hat d_s'$.
-By (\ref{eqn:ibid-relaxation-props}),
-it would have to be that $d_s(x) < \hat d_s(x)$.
-Consider a true shortest path $p$ from $s$ to $x$;
-by (\ref{eqn:ibid-relaxation-props})
-such a path exists and has finite length $d_s(x)$.
-By (\ref{eqn:ibid-relaxation-props}),
-we have that $d_s(s) = \hat d_s(s) = 0$
-(and so $s$ and $x$ must be distinct).
-Let $(u,v)$ be the first edge along $p$ such that
-$d_s(u) = \hat d_s(u)$
-but $d_s(v) < \hat d_s(v)$.
-Since $p$ is a shortest path,
-edge $(u,v)$ must therefore be in tension.
-Since $w \geq 0$,
-it must be that $d_s(u) \leq d_s(x)$;
-further, since $d_s(u) = \hat d_s(u)$,
-$d_s(x) < \hat d_s(x)$,
-and $\hat d_s(x) \leq \hat d_s'$
-it must be that $\hat d_s(u) < \hat d_s'$.
-But then edge $(u,v)$ is in tension with lower $\hat d_s(u)$!
-This contradiction implies that every vertex $x$
-with $\hat d_s(x) \leq \hat d_s'$
-must have $\hat d_s(x) = d_s(x)$.
+We can show that our approximation $d$
+is \emph{sound} for a subset of vertices
+as described by Theorem~\ref{thm:ibid-relaxation-sound}.
 
 \begin{marginfigure}
    \centering
    \includegraphics{build/ibid-dijkstra-trust}
    \caption{Tensioned edge trust region
       for $w \geq 0$.
-      Contours are of the current estimate $\hat d_s$.
+      Contours are of the current estimate $d$.
       Currently tensioned edges are bold and dotted.}
 \end{marginfigure}
 
+\begin{theorem}
+Let $d'$ be the smallest value $d(u)$
+for any edge $e_{uv}$ labeled as in tension
+by (\ref{eqn:ibid-relaxation-tensioned}).
+If $w \geq 0$,
+any vertex $v$ with $d(v) \leq d'$
+has $d(v) = d^*(v)$.
+\label{thm:ibid-relaxation-sound}
+\end{theorem}
+
+\begin{proof}[Proof of Theorem~\ref{thm:ibid-relaxation-sound}]
+The proof proceeds as follows.
+First, if $d' = \infty$,
+then no edges can be in tension,
+and so $d = d^*$ everywhere
+as shown in Section~\ref{subsec:ibid-tension}.
+Otherwise,
+suppose that $d(x) \neq d^*(x)$
+for some vertex $x$ with $d(x) \leq d'$.
+By (\ref{eqn:ibid-relaxation-props}),
+it would have to be that $d^*(x) < d(x)$.
+Consider a true shortest path $p$ from $s$ to $x$;
+by (\ref{eqn:ibid-relaxation-props})
+such a path exists and has finite length $d^*(x)$.
+By (\ref{eqn:ibid-relaxation-props}),
+we have that $d^*(s) = d(s) = 0$
+(and so $s$ and $x$ must be distinct).
+Let $e_{uv}$ be the first edge along $p$ such that
+$d^*(u) = d(u)$
+but $d^*(v) < d(v)$.
+Since $p$ is a shortest path,
+edge $e_{uv}$ must therefore be in tension.
+Since $w \geq 0$,
+it must be that $d^*(u) \leq d^*(x)$;
+further, since $d^*(u) = d(u)$,
+$d^*(x) < d(x)$,
+and $d(x) \leq d'$
+it must be that $d(u) < d'$.
+But then edge $e_{uv}$ is in tension with lower $d(u)$!
+This contradiction implies that every vertex $x$
+with $d(x) \leq d'$
+must have $d(x) = d^*(x)$.
+\end{proof}
+
 As a result,
-a given value $\hat d_s'$ creates a region of vertices
-with values $\hat d_s(x) \leq \hat d_s'$ that are known to be
+a given value $d'$ creates a region of vertices
+with values $d(x) \leq d'$ that are known to be
 accurate.
 This confers two distinct advantages when designing an algorithm.
 First,
-all tensioned edges $(u,v)$ with $\hat d_s(u) = \hat d_s'$
+all tensioned edges $e_{uv}$ with $d(u) = d'$
 (of which there must be at least one if any edges are in tension)
 can be relaxed immediately,
 and will never be retensioned.
 This is exactly the order imposed by the OPEN list in Dijkstra's
 algorithm \citep{dijkstra1959anote}.
-Second,
-if a path is sought only a particular destination vertex $t$,
-the algorithm can be terminated once
-$\hat d_s(t) \leq \hat d_s'$,
-since at that point the true distance to $t$ will be known valid.
+
+\subsection{Completeness and Early Termination}
+\label{subsec:ibid-dijkstra-completeness}
 
 \begin{marginfigure}%
    \centering%
    \includegraphics[width=5cm]{figs/incbi-road-ne/singleshot/example-dijkstra.png}%
    \caption{Dijkstra's algorithm computes the start distance function
-      $d_s$ to solve the example shortest path problem.
+      $d^*$ to solve the example shortest path problem.
       Darker vertices have smaller $d$-values.
       The algorithm stops upon reaching the target vertex $t$
       after expanding 1,290,820 vertices.}%
    \label{fig:ibid:example-distance}%
 \end{marginfigure}
 
-\section{Incremental Search}
-\label{sec:ibid:incremental}
+If a path is sought only a particular destination vertex $t$,
+it is beneficial to terminate the algorithm before all edges are relaxed.
+The soundness result (Theorem~\ref{thm:ibid-relaxation-sound})
+demonstrates that once $d(t) \leq d'$,
+the value $d(t)$ is known to be correct.
+However,
+proving that a back-reconstructed solution path is correct
+requires a complementary completeness result --
+that it, to show that if a better solution exists,
+it would have been found.
 
-How can we adapt the relaxation approach to the incremental setting?
-And how can we recover the original algorithm from the more general one?
+Unfortunately the edge cases for completeness are less strong
+than for soundness.
+See the example in Figure~\ref{fig:ibid:relaxation-completeness-issue}.
+\cdnote{Add note about how in the special case where $d$ is initialized
+to $\infty$ and all $d$-values are thereafter reduced via edge
+relaxations,
+this completeness result also extends to the case of
+$w \geq 0$ and $d^*(x) \leq d'$.
+But this result isn't applicable to incremental settings as we'll
+discuss in Section~\ref{sec:ibid:incremental}.}
 
-This stuff is more modern (1996, 2004).
+\begin{marginfigure}
+   \centering
+   \begin{tikzpicture}
+      \tikzset{>=latex} % arrow heads
+      \node[fill=black,circle,inner sep=1.2pt] (s) at (0,0) {};
+      \node[fill=black,circle,inner sep=1.2pt] (a) at (1.5,0) {};
+      \node[fill=black,circle,inner sep=1.2pt] (b) at (1.5,1.2) {};
+      \node[fill=black,circle,inner sep=1.2pt] (x) at (3.0,0) {};
+      \draw[->,densely dashed] (s) -- (a) node[midway,fill=white,circle,inner sep=1pt] {0};
+      \draw[->] (a) -- (x) node[midway,fill=white,circle,inner sep=1pt] {0};
+      \draw[->] (s) -- (b) node[midway,fill=white,circle,inner sep=1pt] {1};
+      \draw[->] (b) -- (x) node[midway,fill=white,circle,inner sep=1pt] {1};
 
-A review is here: \citep{eppstein1999dynamic},
-\citep{demetrescu2010dynamic}.
+      \node[above=0.05cm of s] {$s$};
+      \node[above=0.05cm of a] {$a$};
+      \node[below=0.05cm of b] {$b$};
+      \node[above=0.05cm of x] {$x$};
 
-Talk about how this is centrally a restatement of the Dijktsra's ordering.
-Bring in the invariant.
+      \node[below=0.05cm of s] {$d=0$};
+      \node[below=0.05cm of a] {$d=3$};
+      \node[above=0.35cm of b] {$d=1$};
+      \node[below=0.05cm of x] {$d=0$};
 
-DynamicSWSF-FP \citep{ramalingam1996dynamicswsffp}.
-
-How about this: \citep{frigioni2000dynamicsp}.
-
-Revisit Bellman equation.
-
-The central idea is that the search maintains the following invariant.
-Note that this is a basic restatement of the distance function
-ordering that underlies Dijkstra's algorithm.
-
-\begin{invariant}
-If $w$ is everywhere positive and $k_{\ms{min}}$ is the key of
-the minimal inconsistent vertex,
-then all vertices with key $k(v) < k_{\ms{min}}$ is consistent
-and correct.
-\end{invariant}
-
-\begin{marginfigure}%
-   \centering%
-   \subfloat[Initial search]{%
-      \centering%
-      \includegraphics[width=5cm]{figs/incbi-road-ne/singleshot/example-incuni-0.png}%
-   }
-   
-   \subfloat[Replan search]{%
-      \centering%
-      \includegraphics[width=5cm]{figs/incbi-road-ne/singleshot/example-incuni-1.png}%
-   }%
-   \caption{Initial search: 1,287,897 expansions.
-      Replan: 391,122 expansions.}%
-   %\label{fig:ibid:example-bidirectional}%
+      \node[below=0.35cm of s] {$d^*=0$};
+      \node[below=0.35cm of a] {$d^*=0$};
+      \node[above=0.05cm of b] {$d^*=1$};
+      \node[below=0.35cm of x] {$d^*=0$};
+   \end{tikzpicture}
+   \caption{Problem case for pathfinding with distance functions.
+      Here, $d$ satisfied a and c, with edge $e_{sa}$ tensioned,
+      and $d' = 0$.
+      While the approximation $d$ is \emph{sound} at $x$
+      ($d(x)$ is correct),
+      reconstructing a shortest path requires \emph{completeness}.}
+   \label{fig:ibid:relaxation-completeness-issue}
 \end{marginfigure}
 
-\subsection{Incremental Bidirectional Search: The Algorithm}
+\begin{theorem}
+If either $w \geq 0$ and $d^*(x) < d'$,
+or if $w > 0$ and $d^*(x) \leq d'$,
+then $d(x) = d^*(x)$.
+\label{thm:ibid-relaxation-complete}
+\end{theorem}
 
-\begin{marginfigure}%
-   \centering%
-   \subfloat[Initial search]{%
-      \centering%
-      \includegraphics[width=5cm]{figs/incbi-road-ne/singleshot/example-incbi-0.png}%
-   }
-   
-   \subfloat[Replan search]{%
-      \centering%
-      \includegraphics[width=5cm]{figs/incbi-road-ne/singleshot/example-incbi-1.png}%
-   }%
-   \caption{Initial search: 1,181,616 expansions.
-      Replan: 262,422 expansions.}%
-   %\label{fig:ibid:example-bidirectional}%
-\end{marginfigure}
+\begin{proof}[Proof of Theorem~\ref{thm:ibid-relaxation-complete}]
+Consider a true shortest path $p^*$ of length $d^*(x)$ from $s$ to $x$.
+Due to our conditions,
+all vertices $u$ before $x$ on $p^*$ have $d^*(u) < d'$.
+By (\ref{eqn:ibid-relaxation-props}),
+we have $d(s) = d^*(s) = 0$.
+Consider each edge $e_{uv}$ in turn along $p^*$,
+for which $d^*(u) + w(e_{uv}) = d^*(v)$.
+For each, suppose that $d(u) = d^*(u)$.
+Then we have $d(u) < d'$,
+so that edge $e_{uv}$ must not be in tension.
+Thus $d(v) \leq d(u) + w(e_{uv})$,
+and by (\ref{eqn:ibid-relaxation-props}) we know $d(v) = d^*(v)$.
+Therefore, we have $d(x) = d^*(s)$.
+\end{proof}
 
+\begin{theorem}
+If either $w \geq 0$ and $d^*(x) < d'$,
+or if $w > 0$ and $d^*(x) \leq d'$,
+then a shortest path can be reconstructed backwards from $x$
+by prepending the incoming edge $e_{uv}$ which minimizes
+$d(u) + w(e_{uv})$ until $s$ is reached.
+\label{thm:ibid-relaxation-reconstruct}
+\end{theorem}
 
-
+\begin{proof}[Proof of Theorem~\ref{thm:ibid-relaxation-reconstruct}]
+We will show that for every such vertex $x$,
+there exist a predecessor $u$ and incident edge $e_{uv}$
+for which $d(u) + w(e_{uv}) = d(x)$.
+It follows that $e_{uv}$ is on a shortest path to $x$.
+This argument can then be applied recursively to $u$,
+which must still satisfy the necessary conditions.
+\end{proof}
 
 \section{Bidirectional Search}
 \label{sec:ibid:bidirectional}
@@ -513,29 +579,17 @@ The first bidirectional algorithm
 was proposed by Dantzig \citep{dantzig1963linearprogramming},
 and the first precisely described algorithm was presented by
 Nicholson \citep{nicholson1966shortest}.
-
 Implementation of a sound and efficient algorithm
 turns on two important questions:
-(a) how to balance expansions from the two directions of the search,
-and (b) when and how to terminate with a shortest path.
-
-\paragraph{Balancing Directions}
-The general bidirectional algorithm leaves open the strategy
-used to balance the progression of the two search directions.
-Options based on alternating \citep{dantzig1963linearprogramming},
-or selecting the direction with the smaller {\sc Open} distance
-\citep{nicholson1966shortest}
-or {\sc Open} (and finite) set cardinality
-\citep{pohl1969bidirectional}
-have been proposed.
-Note that while some literature asserts that
-these can be interleaved arbitrarily,
-termination of the algorithm requires that each direction
-be expanded at least once.
-Our example problems use the balanced distance criterion.
+(a) when and how to terminate with a shortest path,
+and (b) how to balance expansions from the two directions of the
+search.
 
 \subsection{Termination Conditions}
 \label{sec:ibid:bidirectional-termination}
+
+What is the equivalent to the completeness-based termination condition
+described in Section~\ref{subsec:ibid-dijkstra-completeness}?
 
 What happens upon an encounter between the forward and reverse searches?
 Goldberg \citep{goldberg2005spexternalmemory}
@@ -571,11 +625,11 @@ See Algorithm~\ref{alg:ibid:bidirectional-termination}.
    \centering
    \begin{tikzpicture}
       \tikzset{>=latex} % arrow heads
-      \node[draw,circle,inner sep=1.5pt] (s) at (0,0) {};
-      \node[draw,circle,inner sep=1.5pt] (a) at (1.5,0) {};
-      \node[draw,circle,inner sep=1.5pt] (b) at (3.0,0) {};
-      \node[draw,circle,inner sep=1.5pt] (t) at (4.5,0) {};
-      \node[draw,circle,inner sep=1.5pt] (c) at (2.25,0.8) {};
+      \node[fill=black,circle,inner sep=1.2pt] (s) at (0,0) {};
+      \node[fill=black,circle,inner sep=1.2pt] (a) at (1.5,0) {};
+      \node[fill=black,circle,inner sep=1.2pt] (b) at (3.0,0) {};
+      \node[fill=black,circle,inner sep=1.2pt] (t) at (4.5,0) {};
+      \node[fill=black,circle,inner sep=1.2pt] (c) at (2.25,0.8) {};
       \draw[->] (s) -- (a) node[midway,fill=white,circle,inner sep=1pt] {3};
       \draw[->] (a) -- (b) node[midway,fill=white,circle,inner sep=1pt] {3};
       \draw[->] (b) -- (t) node[midway,fill=white,circle,inner sep=1pt] {3};
@@ -594,6 +648,348 @@ See Algorithm~\ref{alg:ibid:bidirectional-termination}.
       but it does not lie on the shortest path.}
    \label{fig:ibid:bidirectional-termination-issue}
 \end{marginfigure}
+
+\subsection{Balancing Directions}
+The general bidirectional algorithm leaves open the strategy
+used to balance the progression of the two search directions.
+Options based on alternating \citep{dantzig1963linearprogramming},
+or selecting the direction with the smaller {\sc Open} distance
+\citep{nicholson1966shortest}
+or {\sc Open} (and finite) set cardinality
+\citep{pohl1969bidirectional}
+have been proposed.
+Note that while some literature asserts that
+these can be interleaved arbitrarily,
+termination of the algorithm requires that each direction
+be expanded at least once.
+Our example problems use the balanced distance criterion.
+
+\section{Incremental Search}
+\label{sec:ibid:incremental}
+
+How can we adapt the relaxation approach to the incremental setting?
+And how can we recover the original algorithm from the more general one?
+
+We can rely on just the consistency,
+but not the upper bound part.
+So now there are many solutions.
+So we need to further constrain the graph to have
+positive edge weights.
+
+This stuff is more modern (1996, 2004).
+
+A review is here: \citep{eppstein1999dynamic},
+\citep{demetrescu2010dynamic}.
+
+Talk about how this is centrally a restatement of the Dijktsra's ordering.
+Bring in the invariant.
+
+DynamicSWSF-FP \citep{ramalingam1996dynamicswsffp}.
+
+How about this: \citep{frigioni2000dynamicsp}.
+
+Revisit Bellman equation.
+
+The central idea is that the search maintains the following invariant.
+Note that this is a basic restatement of the distance function
+ordering that underlies Dijkstra's algorithm.
+
+Define $r$ and $d$,
+what we mean by \emph{consistent},
+and what $k$ is.
+
+In general (no non-positive cycles),
+the algorithm terminates.
+The proof is that key values only increase (somehow).
+
+All of the proofs in this section relate to
+graphs with positive edge weights ($w > 0$),
+with $k_{\ms{min}}$ the minimal key among inconsistent vertices.
+
+\subsection{Approximation Soundness}
+
+The theorems below are basically a soundness proof --
+if our approximation yields values below a certain value,
+they are known to be correct.
+This is soundness of the approximation,
+not of an algorithm per se.
+
+\begin{theorem}
+Any consistent vertex $x$ with $d[x] \leq k_{\ms{min}}$
+has $d[x] = d^*(x)$.
+\label{thm:ibid-dynamicswsffp-sound}
+\end{theorem}
+
+\begin{proof}[Proof of Theorem~\ref{thm:ibid-dynamicswsffp-sound}]
+The proof relies upon a path construction described by
+Lemma~\ref{lemma:ibid-dynamicswsffp-sound-conpath}.
+We then show that $d[x]$ can be both
+no less than $d^*(x)$
+(Lemma~\ref{lemma:ibid-dynamicswsffp-sound-geq})
+and no greater than $d^*(x)$
+(Lemma~\ref{lemma:ibid-dynamicswsffp-sound-leq}).
+\end{proof}
+
+\begin{lemma}
+For any consistent vertex $x$ with $d[x] \leq k_{\ms{min}}$,
+there exists a path $p$ from $s$ to $x$
+in which each vertex is consistent
+and each edge $e_{uv}$ satisfies $d[u] + w(e_{uv}) = d[v]$.
+\label{lemma:ibid-dynamicswsffp-sound-conpath}
+\end{lemma}
+
+\begin{proof}[Proof of Lemma~\ref{lemma:ibid-dynamicswsffp-sound-conpath}]
+Construct the path $p$ as follows.
+Initialize the path with the single vertex $x$.
+Iteratively consider the first vertex $v$ on the path,
+which is known to be consistent.
+In the first case, if $v \neq s$,
+then there exists a predecessor vertex $u$ and edge $e_{uv}$
+with $d[u] + w(e_{uv}) = r(v)$.
+Since $w > 0$ and $d[v] = r(v)$,
+we have $d[u] < d[v] \leq d[x]$.
+As a consequence,
+$u$ is consistent;
+prepend to the path the vertex $u$ and the edge $e_{uv}$,
+and iterate.
+In the second case, if $v = s$,
+then we finish our construction of $p$.
+Since the values $d[u]$ decrease monotonically
+for all inserted vertices,
+this process will terminate with a path $p$ beginning at $s$.
+\end{proof}
+
+\begin{lemma}
+Any consistent vertex $x$ with $d[x] \leq k_{\ms{min}}$
+has $d[x] \geq d^*(x)$.
+\label{lemma:ibid-dynamicswsffp-sound-geq}
+\end{lemma}
+
+\begin{proof}[Proof of Lemma~\ref{lemma:ibid-dynamicswsffp-sound-geq}]
+This follows directly from
+Lemma~\ref{lemma:ibid-dynamicswsffp-sound-conpath}.
+Since all vertices on the path are known consistent,
+we must have $d[s] = 0$.
+Further,
+since the $d$-values across each edge in $p$
+satisfy $d[u] + w(e_{uv}) = d[v]$,
+it follows that $d[x] = \sum_{e \in p} w(e)$.
+Therefore,
+a path exists from $s$ to $x$ of length $d[x]$,
+and so the true distance $d^*(x)$ must be upper-bounded by $d[x]$.
+\end{proof}
+
+\begin{lemma}
+Any consistent vertex $v$ with $d[x] \leq k_{\ms{min}}$
+has $d[x] \leq d^*(x)$.
+\label{lemma:ibid-dynamicswsffp-sound-leq}
+\end{lemma}
+
+\begin{proof}[Proof of Lemma~\ref{lemma:ibid-dynamicswsffp-sound-leq}]
+We demonstrate that $d[x] \leq d^*(x)$ by contradiction.
+Suppose a vertex $x$ exists for which $d^*(x) < d[x]$.
+Then there must exist a path $p'$ from $s$ to $x$ of length $d^*(x)$,
+with $d^*(s) = 0$ and $d^*(u) + w(e_{uv}) = d^*(v)$ for each edge
+in $p'$;
+as a consequence,
+we must have $d^*(v) < d[x]$ for all vertices $v$ on $p'$.
+By Lemma~\ref{lemma:ibid-dynamicswsffp-sound-conpath},
+we know that $s$ is consistent,
+so $d[s] = 0$.
+We will show that walking along
+each edge $e_{uv}$ on $p'$ starting at $s$,
+if $d[u] \leq d^*(u)$,
+then $d[v] \leq d^*(v)$.
+
+By definition,
+we have $d[u] + w(e_{uv}) \geq r[v]$,
+so that $d[u] - d^*(u) \geq r[v] - d^*(v)$.
+Therefore,
+it follows that $r[v] \leq d^*(v)$.
+Since $k[v] \leq d^*(v)$,
+it follows that $v$ is consistent,
+so $d[v] \leq d^*(v)$.
+We can replicate this logic down the path.
+As a result,
+it follows that $d[x] \leq d^*(x)$.
+But this contraducts our supposition that $d^*(x) < d[x]$,
+and therefore such a vertex $x$ cannot exist.
+\end{proof}
+
+\begin{marginfigure}%
+   \centering%
+   \subfloat[Initial search]{%
+      \centering%
+      \includegraphics[width=5cm]{figs/incbi-road-ne/singleshot/example-incuni-0.png}%
+   }
+   
+   \subfloat[Replan search]{%
+      \centering%
+      \includegraphics[width=5cm]{figs/incbi-road-ne/singleshot/example-incuni-1.png}%
+   }%
+   \caption{Initial search: 1,287,897 expansions.
+      Replan: 391,122 expansions.}%
+   %\label{fig:ibid:example-bidirectional}%
+\end{marginfigure}
+
+\subsection{Approximation Completeness}
+
+For bidirectional search,
+it's also necessary to be able to prove that you have found
+all vertices within a certain distance of the start.
+Basically, this is a completeness proof --
+if a distance exists below a certain value,
+we will have found it.
+This is completeness of the approximation,
+not of an algorithm per se.
+
+\begin{theorem}
+Any vertex $x$ with $d^*(x) < k_{\ms{min}}$
+has $d[x] = d^*(x)$.
+\label{thm:ibid-dynamicswsffp-complete}
+\end{theorem}
+
+\begin{proof}[Proof of Theorem~\ref{thm:ibid-dynamicswsffp-complete}]
+We show that $d[x]$ can be both
+no less than $d^*(x)$
+(Lemma~\ref{lemma:ibid-dynamicswsffp-complete-geq})
+and no greater than $d^*(x)$
+(Lemma~\ref{lemma:ibid-dynamicswsffp-complete-leq}).
+\end{proof}
+
+\begin{lemma}
+Any vertex $x$ with $d^*(x) < k_{\ms{min}}$
+has $d[x] \geq d^*(x)$.
+\label{lemma:ibid-dynamicswsffp-complete-geq}
+\end{lemma}
+
+\begin{proof}[Proof of Lemma~\ref{lemma:ibid-dynamicswsffp-complete-geq}]
+We show this by contradiction.
+Suppose there exists a vertex $x$ with $d^*(x) < k_{\ms{min}}$
+for which $d[x] < d^*(x)$.
+Then $d[x] < k_{\ms{min}}$,
+so $x$ must be consistent.
+By Lemma~\ref{lemma:ibid-dynamicswsffp-sound-geq},
+we must have $d[x] \geq d^*(x)$.
+This contradicts our supposition.
+\end{proof}
+
+\begin{lemma}
+Any vertex $x$ with $d^*(x) < k_{\ms{min}}$
+has $d[x] \leq d^*(x)$.
+\label{lemma:ibid-dynamicswsffp-complete-leq}
+\end{lemma}
+
+\begin{proof}[Proof of Lemma~\ref{lemma:ibid-dynamicswsffp-complete-leq}]
+This proof proceeds in a similar way to that for
+Lemma~\ref{lemma:ibid-dynamicswsffp-sound-leq}.
+Construct a true shortest path from $s$ to $x$,
+with $d^*$-values increasing monotonically from
+$d^*(s) = 0$ to $d^*(x)$.
+Consider each edge $e_{uv}$ in turn as follows.
+Assume that $u$ is consistent,
+with $d[u] \leq d^*(u)$.
+Note that this is true for the first edge with $u = s$,
+since with $0 \leq d^*(x)$,
+we have $0 < k_{\ms{min}}$,
+so that $s$ must is consistent with $r[s] = d[s] = d^*(s) = 0$.
+Since $e_{uv}$ lies on a true shortest path,
+we must have $d^*(u) + w(e_{uv}) = d^*(v)$,
+and for all edges $d[u] + w(e_{uv}) \geq r[v]$.
+Together, this implies that
+$d^*(u) - d[u] \leq d^*(v) - r[v]$.
+Our assumption that $d[u] \leq d^*(u)$
+therefore implies that $r[v] \leq d^*(v)$.
+Since $d^*(v) \leq d^*(x)$ and $d^*(x) < k_{\ms{min}}$,
+we know that $v$ is consistent,
+so we conclude that $d[v] \leq d^*(v)$,
+and we can proceed to the next edge on the path.
+We end with $v = x$,
+so that $d[x] \leq d^*(x)$.
+\end{proof}
+
+\subsection{Incremental Bidirectional Search: The Algorithm}
+
+Important: $s$ and $t$ must be distict!
+
+\begin{theorem}
+Define $E_{\ms{conn}}$ as the set of all edges $e_{uv}$ such that
+$u$ is $s$-consistent with $d[s] \leq k_s$
+and $v$ is $t$-consistent with $d[t] \leq k_t$.
+If $k_s > 0$, $k_t > 0$,
+and
+$\min_{e \in E_{\ms{conn}}} \left( d_s[u] + w(e_{uv}) + d_t[v] \right)
+   \leq k_s + k_t$,
+then the path through $e_{uv}$ is a shortest path.
+\label{thm:ibid-sound}
+\end{theorem}
+
+\begin{proof}[Proof of Theorem~\ref{thm:ibid-sound}]
+We will prove this by contradiction.
+Suppose that a path $p'$ exists with
+$\mbox{len}(p') < \min_{e \in E_{\ms{conn}}} \left( d_s[u] + w(e_{uv}) + d_t[v] \right)$.
+Then it must also be that
+$\mbox{len}(p') < k_s + k_t$.
+We will consider two cases.
+
+First, consider the case where $k_s > \mbox{len}(p')$,
+so that $k_s > d_s^*(t)$.
+In this case,
+the last edge $e_{ut}'$ on $p'$
+has $d_s^*(u') < d_s^*(t) < k_s$;
+by Theorem~\ref{thm:ibid-dynamicswsffp-complete},
+$u'$ is therefore $s$-consistent with $d_s[u'] = d_s^*(u')$.
+In addition,
+since $k_t > 0$,
+$t$ must be $t$-consistent with $d_t[t] = 0$.
+Therefore,
+it follows that $d_s^*(u') + w(e_{ut}') < d_s[u'] + w(e_{ut}')$,
+which contradicts the supposition.
+
+In the second case with $k_s \leq \mbox{len}(p')$,
+identify on $p'$ the edge $e'_{uv}$ adjoining the vertices $u'$, $v'$
+such that $d_s^*(u') < k_s \leq d_s^*(v')$.
+(Since $k_s > 0$, this edge will exist.)
+Since $d_s^*(u') < k_s$,
+by Theorem~\ref{thm:ibid-dynamicswsffp-complete},
+$u'$ is therefore $s$-consistent with $d_s[u'] = d_s^*(u')$.
+Consider our supposition that
+$d_s^*(u') + w(e_{uv}') + d_t^*(v') < k_s + k_t$.
+Since $d_s^*(u') + w(e_{uv}') = d_s^*(v')$
+and $k_s \leq d_s^*(v')$,
+it follows that
+$d_t^*(v') < k_t$.
+Therefore,
+by Theorem~\ref{thm:ibid-dynamicswsffp-complete},
+$v'$ is $t$-consistent with $d_t[v'] = d_t^*(v')$.
+As a consequence,
+the edge $e'_{uv}$ must be in $E_{\ms{conn}}$.
+Therefore,
+$d_s^*(u') + w(e_{uv}') + d_t^*(v')
+   < d_s[u'] + w(e_{uv}') + d_t[v']$,
+which is a contradiction.
+\end{proof}
+
+\begin{marginfigure}%
+   \centering%
+   \subfloat[Initial search]{%
+      \centering%
+      \includegraphics[width=5cm]{figs/incbi-road-ne/singleshot/example-incbi-0.png}%
+   }
+   
+   \subfloat[Replan search]{%
+      \centering%
+      \includegraphics[width=5cm]{figs/incbi-road-ne/singleshot/example-incbi-1.png}%
+   }%
+   \caption{Initial search: 1,181,616 expansions.
+      Replan: 262,422 expansions.}%
+   %\label{fig:ibid:example-bidirectional}%
+\end{marginfigure}
+
+
+
+
+
 
 \subsection{IBiD}
 
