--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,7 @@
 \documentclass[nobib]{tufte-book}
 
 % marginfigure textwidth is 144.0pt = 5.0610cm
+\usepackage{natbib}
 
 \usepackage{standalone}
 
@@ -244,19 +245,19 @@ We also provide open-source implementations of our algorithms.
 \end{fullwidth}
 %\end{abstract}
 
-\tableofcontents
+% \tableofcontents
 
-\include{thesis-ch01-intro}
+% \include{thesis-ch01-intro}
 
-\include{thesis-ch02-roadmaps}
+% \include{thesis-ch02-roadmaps}
 
-\include{thesis-ch03-lazysp}
+% \include{thesis-ch03-lazysp}
 
 \include{thesis-ch04-ibid}
 
-\include{thesis-ch05-lemur}
+% \include{thesis-ch05-lemur}
 
-\include{thesis-ch06-family}
+% \include{thesis-ch06-family}
 
 \appendix
 
