--- a/thesis.tex
+++ b/thesis.tex
@@ -2,6 +2,8 @@
 
 % marginfigure textwidth is 144.0pt = 5.0610cm
 
+\usepackage{natbib}
+
 \usepackage{standalone}
 
 \usepackage{calc}
@@ -247,21 +249,14 @@ We also provide open-source implementations of our algorithms.
 \tableofcontents
 
 %\include{thesis-ch01-intro}
-
 %\include{thesis-ch02-roadmaps}
-
 %\include{thesis-ch03-lazysp}
-
 \include{thesis-ch04-ibid}
-
 %\include{thesis-ch05-lemur}
-
 %\include{thesis-ch06-family}
 
 \appendix
-
 %\include{thesis-ch03-lazysp-proofs}
-
 \include{thesis-ch04-ibid-proofs}
 
 \bibliographystyle{abbrv}
